ProyectoFinal/force-app/main/default/objects/Opportunity/validationRules/PM_Assignment_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>PM_Assignment_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL(StageName, &quot;Closed Won&quot;), ISBLANK( Project_Manager__c ) )</errorConditionFormula>
    <errorMessage>The Project Manager is required.</errorMessage>
</ValidationRule>